--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,4 +9,7 @@ a {
   font-family: "Roboto", sans-serif;
   height: 100vh;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
