--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,10 +7,10 @@ a {
 }
 .app {
   font-family: "Roboto", sans-serif;
-  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   z-index: 1;
+  /* height: fit-content; */
 }
