--- a/src/components/CommentsPanel/Comment/Comment.css
+++ b/src/components/CommentsPanel/Comment/Comment.css
@@ -1,4 +1,30 @@
 .comment-wrapper {
   display: flex;
+  color: #fff;
+  font-weight: bold;
+  margin: 1.5rem 0;
+}
+.comment-avatar {
+  min-width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+.comment-info {
+  display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  padding: 0 0.5rem;
+}
+.comment-info div {
+  word-wrap:break-word
+}
+.show-reply {
+  width: fit-content;
+  font-weight: bold;
+  cursor: pointer;
+  color: royalblue;
 }
