--- a/src/components/CommentsPanel/CommentsPanel.css
+++ b/src/components/CommentsPanel/CommentsPanel.css
@@ -1,20 +1,24 @@
 .comments-panel {
+  color: #fff;
   z-index: 2;
   position: absolute;
   top: 0;
   width: 100%;
-  min-height: 15rem;
-  background-color: darkslategray;
+  min-height: 10rem;
+  height: fit-content;
+  background-color: #181818;
   margin: 57px 0;
   border-radius: 0.5rem;
   padding: 1rem;
   box-sizing: border-box;
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+
 }
 .close-comments {
   z-index: 30;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 5px;
+  right: 5px;
 }
 .load-more-comments {
   color: #fff;
