--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,9 @@
 .header {
   width: 100%;
-  height: 6rem;
+  padding: 5px 0;
+  height: fit-content;
   position: relative;
-  background-color: lightslategray;
+  background-color: #282828;
   display: flex;
   align-items: center;
   justify-content: center;
